improved thumb view spacing, fixed edit link on item show.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,7 +16,7 @@ div.item {
 	height: 150px;
 	width: 200px;
 	overflow: hidden;
-	margin: 0px 1em 1em 0px;
+	margin: 0px 1.5em 1.5em 0px;
 	border: 2px solid #EEE;
 	 -webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
@@ -178,6 +178,15 @@ a#logo {
   text-indent: -6000px;
   background: transparent url(/images/ot_white.jpg) no-repeat 10px 9px;
   }
+
+div.notice {
+  text-align: center;
+  padding: 0.5em;
+  background-color: #999;
+  color: #FFF;
+    	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+}
  
 #mainNav {
   list-style: none;
